==> sparkfun/SparkFun_BMI270_Arduino_Library/src/SparkFun_BMI270_Arduino_Library.cpp <==
#include "SparkFun_BMI270_Arduino_Library.h"

int8_t BMI270::beginSPI(uint8_t csPin, uint32_t clockFrequency, SPIClass& spiPort)
{
    // Set up chip select pin
    interfaceData.spiCSPin = csPin;
    digitalWrite(csPin, HIGH); // Write high now to ensure pin doesn't go low
    pinMode(csPin, OUTPUT);

    // Set desired clock frequency
    interfaceData.spiClockFrequency = clockFrequency;
    interfaceData.spiPort = &spiPort;

    // Set interface
    sensor.intf = BMI2_SPI_INTF;
    interfaceData.interface = BMI2_SPI_INTF;

    sensor.dummy_byte = 1;

    // Initialize sensor
    return begin();
}

BMI2_INTF_RETURN_TYPE BMI270::readRegistersI2C(uint8_t regAddress, uint8_t* dataBuffer, uint32_t numBytes, BMI270_InterfaceData* interfaceData)
{
    // Jump to desired register address
    interfaceData->i2cPort->beginTransmission(interfaceData->i2cAddress);
    interfaceData->i2cPort->write(regAddress);
    if(interfaceData->i2cPort->endTransmission())
    {
        return BMI2_E_COM_FAIL;
    }

    // Read bytes from these registers
    interfaceData->i2cPort->requestFrom(interfaceData->i2cAddress, numBytes);

    // Store all requested bytes
    for(uint32_t i = 0; i < numBytes && interfaceData->i2cPort->available(); i++)
    {
        dataBuffer[i] = interfaceData->i2cPort->read();
    }

    return BMI2_OK;
}

BMI2_INTF_RETURN_TYPE BMI270::readRegistersSPI(uint8_t regAddress, uint8_t* dataBuffer, uint32_t numBytes, BMI270_InterfaceData* interfaceData)
{
    // Start transmission
    interfaceData->spiPort->beginTransaction(SPISettings(interfaceData->spiClockFrequency, MSBFIRST, SPI_MODE0));
    digitalWrite(interfaceData->spiCSPin, LOW);
    interfaceData->spiPort->transfer(regAddress | 0x80);

    // Read all requested bytes
    for(uint32_t i = 0; i < numBytes; i++)
    {
        dataBuffer[i] = interfaceData->spiPort->transfer(0);
    }

    // End transmission
    digitalWrite(interfaceData->spiCSPin, HIGH);
    interfaceData->spiPort->endTransaction();

    return BMI2_OK;
}

BMI2_INTF_RETURN_TYPE BMI270::writeRegistersI2C(uint8_t regAddress, const uint8_t* dataBuffer, uint32_t numBytes, BMI270_InterfaceData* interfaceData)
{
    // Begin transmission
    interfaceData->i2cPort->beginTransmission(interfaceData->i2cAddress);

    // Write the address
    interfaceData->i2cPort->write(regAddress);
    
    // Write all the data
    for(uint32_t i = 0; i < numBytes; i++)
    {
        interfaceData->i2cPort->write(dataBuffer[i]);
    }

    // End transmission
    if(interfaceData->i2cPort->endTransmission())
    {
        return BMI2_E_COM_FAIL;
    }

    return BMI2_OK;
}

BMI2_INTF_RETURN_TYPE BMI270::writeRegistersSPI(uint8_t regAddress, const uint8_t* dataBuffer, uint32_t numBytes, BMI270_InterfaceData* interfaceData)
{
    // Begin transmission
    interfaceData->spiPort->beginTransaction(SPISettings(interfaceData->spiClockFrequency, MSBFIRST, SPI_MODE0));
    digitalWrite(interfaceData->spiCSPin, LOW);
    
    // Write the address
    interfaceData->spiPort->transfer(regAddress);
    
    // Write all the data
    for(uint32_t i = 0; i < numBytes; i++)
    {
        interfaceData->spiPort->transfer(dataBuffer[i]);
    }

    // End transmission
    digitalWrite(interfaceData->spiCSPin, HIGH);
    interfaceData->spiPort->endTransaction();

    return BMI2_OK;
}
