==> Rione/ssl-Circuit/2025/STMDev/main_F446RE/Lib/SparkFun_BMI270_Arduino_Library-main/SparkFun_BMI270_Arduino_Library.cpp <==
#include "SparkFun_BMI270_Arduino_Library.h"
#include <cstring>
#include <cstdlib>

int8_t BMI270::beginSPI(uint8_t csPin, uint32_t clockFrequency, SPIClass& spiPort)
{
    // Set up chip select pin
    interfaceData.spiCSPin = csPin;
    //digitalWrite(csPin, HIGH); // Write high now to ensure pin doesn't go low
    HAL_GPIO_WritePin(GPIOA, csPin, GPIO_PIN_SET);
    //pinMode(csPin, OUTPUT);
    GPIO_InitTypeDef GPIO_InitStruct = {0};

    __HAL_RCC_GPIOA_CLK_ENABLE();   // ← 必須！

    GPIO_InitStruct.Pin = csPin;
    GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP;
    GPIO_InitStruct.Pull = GPIO_NOPULL;
    GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_LOW;

    HAL_GPIO_Init(GPIOA, &GPIO_InitStruct);
    // Set desired clock frequency
    interfaceData.spiClockFrequency = clockFrequency;
    interfaceData.spiPort = &spiPort;

    // Set interface
    sensor.intf = BMI2_SPI_INTF;
    interfaceData.interface = BMI2_SPI_INTF;

    sensor.dummy_byte = 1;

    // Initialize sensor
    return begin();
}

BMI2_INTF_RETURN_TYPE BMI270::readRegistersI2C(uint8_t reg,uint8_t* data,uint32_t len,BMI270_InterfaceData* ifc)
{
    /*
    // Jump to desired register address
    interfaceData->i2cPort->beginTransmission(interfaceData->i2cAddress);
    interfaceData->i2cPort->write(regAddress);
    if(interfaceData->i2cPort->endTransmission())
    {
        return BMI2_E_COM_FAIL;
    }

    // Read bytes from these registers
    interfaceData->i2cPort->requestFrom(interfaceData->i2cAddress, numBytes);

    // Store all requested bytes
    for(uint32_t i = 0; i < numBytes && interfaceData->i2cPort->available(); i++)
    {
        dataBuffer[i] = interfaceData->i2cPort->read();
    }

    return BMI2_OK;
    */
    HAL_StatusTypeDef ret =
        HAL_I2C_Mem_Read(
            ifc->hi2c,
            ifc->i2cAddress << 1,          // HAL は 8bit address
            reg,
            I2C_MEMADD_SIZE_8BIT,
            data,
            len,
            100);

    return (ret == HAL_OK) ? BMI2_OK : BMI2_E_COM_FAIL;
}

BMI2_INTF_RETURN_TYPE BMI270::readRegistersSPI(uint8_t regAddress, uint8_t* dataBuffer, uint32_t numBytes, BMI270_InterfaceData* interfaceData)
{
    // Start transmission
    interfaceData->spiPort->beginTransaction(SPISettings(interfaceData->spiClockFrequency, MSBFIRST, SPI_MODE0));
    HAL_GPIO_WritePin(GPIOA, interfaceData->spiCSPin, GPIO_PIN_RESET);
    interfaceData->spiPort->transfer(regAddress | 0x80);

    // Read all requested bytes
    for(uint32_t i = 0; i < numBytes; i++)
    {
        dataBuffer[i] = interfaceData->spiPort->transfer(0);
    }

    // End transmission
    //digitalWrite(interfaceData->spiCSPin, HIGH);
    HAL_GPIO_WritePin(GPIOA, interfaceData->spiCSPin, GPIO_PIN_SET);    
    interfaceData->spiPort->endTransaction();

    return BMI2_OK;
}

BMI2_INTF_RETURN_TYPE BMI270::writeRegistersI2C(uint8_t reg,const uint8_t* data,uint32_t len,BMI270_InterfaceData* ifc)
{
    /*
    // Begin transmission
    interfaceData->i2cPort->beginTransmission(interfaceData->i2cAddress);

    // Write the address
    interfaceData->i2cPort->write(regAddress);
    
    // Write all the data
    for(uint32_t i = 0; i < numBytes; i++)
    {
        interfaceData->i2cPort->write(dataBuffer[i]);
    }

    // End transmission
    if(interfaceData->i2cPort->endTransmission())
    {
        return BMI2_E_COM_FAIL;
    }

    return BMI2_OK;
    */
HAL_StatusTypeDef ret =
    HAL_I2C_Mem_Write(
        ifc->hi2c,
        ifc->i2cAddress << 1,
        reg,
        I2C_MEMADD_SIZE_8BIT,
        (uint8_t*)data,
        len,
        100);

return (ret == HAL_OK) ? BMI2_OK : BMI2_E_COM_FAIL;
}

BMI2_INTF_RETURN_TYPE BMI270::writeRegistersSPI(uint8_t regAddress, const uint8_t* dataBuffer, uint32_t numBytes, BMI270_InterfaceData* interfaceData)
{
    // Begin transmission
    interfaceData->spiPort->beginTransaction(SPISettings(interfaceData->spiClockFrequency, MSBFIRST, SPI_MODE0));
    HAL_GPIO_WritePin(GPIOA, interfaceData->spiCSPin, GPIO_PIN_RESET);
    
    // Write the address
    interfaceData->spiPort->transfer(regAddress);
    
    // Write all the data
    for(uint32_t i = 0; i < numBytes; i++)
    {
        interfaceData->spiPort->transfer(dataBuffer[i]);
    }

    // End transmission
    HAL_GPIO_WritePin(GPIOA, interfaceData->spiCSPin, GPIO_PIN_SET);
    interfaceData->spiPort->endTransaction();

    return BMI2_OK;
}
